# rust-tutorial

./: .gitignore  README.md
image_dedup/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTATION_TASKS.md  Makefile  PARALLEL_PROCESSING_DESIGN.md  REQUIREMENTS.md
image_dedup/benches/: static_vs_dynamic_dispatch.rs
image_dedup/configs/: average_fast.json  dct_high_quality.json  difference_precise.json  full_dependency_example.json  high_performance.json  sample_config.json  test_setup.json
image_dedup/examples/: image_loader_demo.rs  perceptual_hash_demo.rs  performance_benchmark.rs  send_sync_demo.rs  storage_abstraction_demo.rs  test_file_scanner.rs
image_dedup/src/: app.rs  file_scanner.rs  image_loader.rs  lib.rs  main.rs  perceptual_hash.rs  test_double_finalize.rs
image_dedup/src/benchmarks/: mod.rs  performance_comparison.rs
image_dedup/src/cli/: args.rs  mod.rs
image_dedup/src/commands/: find_dups.rs  mod.rs  scan.rs
image_dedup/src/core/: di_container.rs  error.rs  mod.rs  static_config.rs  static_di.rs  traits.rs  types.rs  unified_di.rs
image_dedup/src/engine/: api.rs  consumer.rs  mod.rs  pipeline.rs  processing_engine.rs  producer.rs
image_dedup/src/factories/: hash_persistence_factory.rs  image_loader_factory.rs  mod.rs  perceptual_hash_factory.rs  processing_config_factory.rs  progress_reporter_factory.rs  static_factory.rs  storage_factory.rs
image_dedup/src/image_loader/: mod.rs  standard.rs
image_dedup/src/perceptual_hash/: average_config.rs  average_hash.rs  config.rs  dct_config.rs  dct_hash.rs  difference_config.rs  factory.rs  mod.rs
(+60 files in other folders)
