[package]
name = "image_dedup"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
img_hash = "3.2"
anyhow = "1.0"
walkdir = "2.3"
async-trait = "0.1"
tokio = { version = "1.32", features = ["full"] }
base64 = "0.22"
hex = "0.4"
mockall = "0.13"
num_cpus = "1.16"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.8"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "static_vs_dynamic_dispatch"
harness = false
